@@ -6,7 +6,8 @@
 	* gmt_grdio.c:		Need to reset zmin/zmax when region was temporarily expanded to
 				include data boundary rows/cols.
 	* grdinfo.c:		Modifier -Ts<dz> returns a symmetrical range about zero.
-				
+	* grdpaste.c:		Had trouble shuffling longitudes correctly for geographic grids.
+			
 2011-11-12	pwessel
 	* gmtmercmap.c:		New example of API use: Create a shaded-relief Mercator map using
 				Etopo 1|2|5m global relief, with optional color bar.  Option -D
